--- a/style.css
+++ b/style.css
@@ -1,74 +1,29 @@
-header {
-    height: 49px;
-    width: 1166px;
-    left: 377px;
-    top: 29px;
-    border-radius: 0px;
+body
+{
+    background-color: rgb(255, 255, 255);
+    font-family: 'Montserrat', sans-serif;
+    margin: 0%;
 }
-
-ul {
-    list-style-type: none;
+header
+{
+    width: 100%;
+    height: 100px;
+    background-color: rgb(200, 200, 200);
+    padding: 20px;
 }
-
-body {
-    font-family: Verdana, sans-serif;
-}
-
-.month {
-    padding: 40px 20px;
-    width: 280px;
-    background: #14988B;
-    text-align: center;
-}
-
-.month ul {
-    margin: 0;
-    padding: 0;
-}
-
-.month ul li {
-    color: white;
-    font-size: 20px;
-    text-transform: uppercase;
-    letter-spacing: 3px;
-}
-
-.month .prev {
-    float: left;
-    padding-top: 10px;
-}
-
-.month .next {
-    float: right;
-    padding-top: 10px;
-}
-
-.weekdays {
-    width: 320px;
-    margin: 0;
-    padding: 10px 0;
-    background-color:#ddd;
-}
-
-.weekdays li {
-    display: inline-block;
+#logo
+{
+    height: 40px;
     width: 40px;
-    color: #666;
-    text-align: center;
+}
+#menu
+{
+    font-size: 18px;
 }
 
-.days {
-    width: 320px;
-    padding: 5px 0;
-    background: #eee;
-    margin: 0;
-}
-
-.days li {
-    display: inline-block;
-    width: 40px;
-    text-align: center;
-    margin-bottom: 5px;
-    font-size:12px;
-    color: #777;
+.menu_column
+{
+    font-size: large;
+    margin-left: 10px;
+    margin-right: 10px;
 }
