--- a/style.css
+++ b/style.css
@@ -1,29 +1,37 @@
 body
 {
-    background-color: rgb(255, 255, 255);
     font-family: 'Montserrat', sans-serif;
-    margin: 0%;
+    background: #FAFAFA;
+    margin: 0;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    color: #000000;
 }
 header
 {
+    position: absolute;
     width: 100%;
-    height: 100px;
-    background-color: rgb(200, 200, 200);
-    padding: 20px;
+    height: 80px;
+    background: #FFFFFF
 }
-#logo
+.header-content
 {
-    height: 40px;
-    width: 40px;
+  list-style: none;
+  text-align: center;
 }
-#menu
+.header-content li
 {
-    font-size: 18px;
+  display: inline-block;
 }
-
-.menu_column
+.header-content a
 {
-    font-size: large;
-    margin-left: 10px;
-    margin-right: 10px;
+  text-decoration: none;
+  position: relative;
+  margin: 0 30px;
+}
+.header-content a.current, .header-content a:hover
+{
+  color: #14988B;
 }
